# signum

./: .gitignore  README.md  SURFACE3D.md  __init__.py  demo.ipynb  llms.txt  pyproject.toml  surface_demo.ipynb  surface_demo.py
engine/: chart.py  dashboard.py  sfera.py  statchart.py  themes.py
examples/: ofz_curve_demo.py
src/signum/: __init__.py
src/signum/engine/: chart.py  dashboard.py  logos.py  statchart.py  surface3d.py  themes.py
support/: SURFACE3D.md  surface_demo.py  theme_gallery.html  theme_gallery.py
