[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signum-charts"
version = "0.40.0"
description = "Professional financial charting for Python — Jupyter, Dash, Streamlit, standalone HTML."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Andrey" },
]
keywords = ["finance", "charting", "trading", "jupyter", "dash", "streamlit", "lightweight-charts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pandas>=1.3",
    "numpy>=1.16",
]

[project.optional-dependencies]
yfinance = ["yfinance>=0.2"]
dash = ["dash>=2.0"]
streamlit = ["streamlit>=1.0"]
all = ["yfinance>=0.2", "dash>=2.0", "streamlit>=1.0"]

[project.urls]
Homepage = "https://github.com/SugoiKitsune/signum"
Repository = "https://github.com/SugoiKitsune/signum"

# ── Packaging: src/ layout. Distribution name is "signum-charts",
# but the import name stays `import signum` (the package dir under src/).
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# Non-Python files shipped inside the wheel. Paths are relative to the
# package dir (src/signum). vendor/ is located at runtime via __file__.
[tool.setuptools.package-data]
signum = ["vendor/*.js", "vendor/LICENSE", "py.typed"]
